# Devoir3_Schrodinger_Template

./: .gitignore  autocorrect.py  notes.yaml  pyproject.toml
latex/: enonce.tex
src/: constants.py  fem.py  shooting.py  tools.py
tests/: test_shrodinger.py
tests/base_tests/: .gitignore  test_grid.py  test_root_scope.py  test_shrodinger.py
tests/base_tests/test_data/: solve_shrodinger_using_fem.pkl  solve_shrodinger_using_shooting.pkl
