[project]
name = "devoir3-spins-template"
version = "0.1.0"
description = "Template of homework 3 (Équation de Schrödinger en dimension 1)"

readme = "README.md"
requires-python = ">=3.10"

dependencies = ["numpy>=1.26", "scipy>=1.13", "matplotlib>=3.10", "tac"]

[tool.uv.sources]
tac = { git = "https://github.com/JeremieGince/TPAutoCorrect" }

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=7.0.0",
  "pylint>=2.15.0",
  "pycodestyle>=2.14",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
